<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_array_creation">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeaderText"
        android:layout_marginTop="32dp"
        android:text="@string/array_creation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeaderText"
        android:layout_marginTop="16dp"
        android:text="@string/array_creation_subtitle"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <RelativeLayout
        android:id="@+id/textScrollViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        app:layout_constraintBottom_toTopOf="@id/buttonContinue">

        <HorizontalScrollView
            android:id="@+id/textScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:clipToPadding="false"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/arrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="32sp"
                android:fontFamily="@font/lato_bold"
                android:gravity="center_horizontal"
                android:textColor="@color/textColor"
                tools:text="[ 25 ; 15; 51; 5 ; 5 ]" />

        </HorizontalScrollView>

    </RelativeLayout>

    <TextView
        android:id="@+id/showArrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/view_array"
        android:textSize="16sp"
        android:textColor="@color/buttonColor"
        android:fontFamily="@font/lato_bold"
        android:background="@drawable/ripple_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textScrollViewContainer" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonSmall"
        android:layout_marginTop="64dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/showArrayText"
        app:layout_constraintBottom_toTopOf="@id/buttonRandom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonSmall"
        android:text="@string/random"
        app:layout_constraintTop_toBottomOf="@id/buttonEdit"
        app:layout_constraintBottom_toTopOf="@id/buttonContinue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonBottomAction"
        android:text="@string/continueText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>