<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sort_method"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        style="@style/HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sort_method"
        android:textColor="#C3A240"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="64dp" />

    <TextView
        android:id="@+id/subTitle"
        style="@style/HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sort_method_subtitle"
        android:textColor="#C8A53B"
        android:textColorHighlight="#C39C28"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:layout_editor_absoluteX="64dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sortMethodsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:fadingEdgeLength="16dp"
        android:requiresFadingEdge="vertical"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        app:layout_constraintBottom_toTopOf="@id/buttonSort" />

    <Button
        android:id="@+id/buttonSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonBottomAction"
        android:text="@string/sort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>